--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/title_barrier"
         android:contentDescription="@string/content_description_user_avatar"
-        tools:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_launcher"
         android:layout_marginBottom="@dimen/title_margin_dimen"
         />
 
