ДЗ 2.4. CRUD: списки, добавление, удаление, изменение. Добавил добавление постов

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/card_post"
+        app:layout_constraintBottom_toTopOf="@+id/barrier_list_post"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:listitem="@layout/card_post" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/barrier_list_post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="top"
+        app:constraint_referenced_ids="edit_text_post_list, image_button_post_list"
         />
-</FrameLayout>
+
+    <EditText
+        android:id="@+id/edit_text_post_list"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        app:layout_constraintHorizontal_weight="6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/image_button_post_list"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/barrier_list_post"
+        android:background="@android:color/transparent"
+        android:hint="@string/post_text"
+        android:inputType="textMultiLine"
+        android:importantForAutofill="no"
+        />
+
+    <ImageButton
+        android:id="@+id/image_button_post_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="@dimen/icon_margin"
+        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/edit_text_post_list"
+        app:layout_constraintStart_toEndOf="@+id/edit_text_post_list"
+        app:layout_constraintTop_toTopOf="@id/edit_text_post_list"
+        android:src="@drawable/ic_accept_30"
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/button_accept" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
