--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/title_margin_dimen"
+    android:paddingTop="@dimen/title_margin_dimen"
+    android:paddingBottom="@dimen/title_margin_dimen"
     tools:context=".MainActivity">
 
     <ImageView
