--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,6 @@
     <dimen name="icon_margin">8dp</dimen>
     <dimen name="icon_size_dimen">24dp</dimen>
     <dimen name="min_width_text_view">30dp</dimen>
+    <dimen name="small_padding">5dp</dimen>
+    <dimen name="edit_text_size">40dp</dimen>
 </resources>
