--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -48,12 +48,14 @@
         tools:text="Description"
         />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu_image_button"
         style="@style/my_icon_style"
+        android:layout_width="@dimen/icon_size_dimen"
+        app:iconGravity="textStart"
+        app:icon="@drawable/ic_baseline_more_vert_24"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/ic_baseline_more_vert_24"
         android:contentDescription="@string/content_description_menu_button"
         android:layout_marginBottom="@dimen/title_margin_dimen"
         />
@@ -78,61 +80,39 @@
         android:layout_marginTop="@dimen/title_margin_dimen"
         />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/like_image_button"
         style="@style/my_icon_style"
-        android:src="@drawable/ic_baseline_favorite_border_24"
+        app:icon="@drawable/ic_baseline_favorite_border_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description_text_view"
+        tools:text="100"
         android:layout_marginTop="@dimen/title_margin_dimen"
         android:contentDescription="@string/content_description_like_image_button"
         />
 
-    <TextView
-        android:id="@+id/number_of_likes_text_view"
-        style="@style/my_text_view_for_icon_style"
-        app:layout_constraintStart_toEndOf="@+id/like_image_button"
-        android:layout_marginStart="@dimen/icon_margin"
-        tools:text="100"
-        />
-
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/share_image_button"
         style="@style/my_icon_style"
-        android:src="@drawable/ic_baseline_share_24"
-        app:layout_constraintStart_toEndOf="@+id/number_of_likes_text_view"
+        app:icon="@drawable/ic_baseline_share_24"
+        app:layout_constraintStart_toEndOf="@+id/like_image_button"
         app:layout_constraintTop_toTopOf="@+id/like_image_button"
         app:layout_constraintBottom_toBottomOf="@+id/like_image_button"
+        tools:text="100"
         android:layout_marginStart="@dimen/icon_margin"
         android:contentDescription="@string/content_description_share_image_button"
         />
 
-    <TextView
-        android:id="@+id/number_share"
-        style="@style/my_text_view_for_icon_style"
-        app:layout_constraintStart_toEndOf="@+id/share_image_button"
-        android:layout_marginStart="@dimen/icon_margin"
-        tools:text="100"
-        />
-
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/views_Image_button"
         style="@style/my_icon_style"
+        app:icon="@drawable/ic_baseline_remove_red_eye_24"
         app:layout_constraintTop_toTopOf="@+id/like_image_button"
         app:layout_constraintBottom_toBottomOf="@+id/like_image_button"
-        app:layout_constraintEnd_toStartOf="@+id/number_views"
-        android:src="@drawable/ic_baseline_remove_red_eye_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="100"
         android:layout_marginEnd="@dimen/icon_margin"
         android:contentDescription="@string/icon_number_of_views" />
-
-
-    <TextView
-        android:id="@+id/number_views"
-        style="@style/my_text_view_for_icon_style"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="@dimen/icon_margin"
-        tools:text="100"
-        />
 
     <View
         android:layout_width="match_parent"
