--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="my_icon_style">
-        <item name="android:layout_width">@dimen/icon_size_dimen</item>
+
+    <style name="my_icon_style" parent="@style/Widget.MaterialComponents.Button.TextButton">
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">@dimen/icon_size_dimen</item>
-        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:padding">0dp</item>
+        <item name="iconTint">@color/grey</item>
     </style>
+
 
 
     <style name="my_text_view_for_icon_style">
