--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -25,7 +25,7 @@
         android:id="@+id/add_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_add_24"
+        app:srcCompat="@drawable/ic_check_24"
         app:layout_anchor="@id/bottom_appbar_add_post"
         android:contentDescription="@string/content_description_add_post_button"
         />
