--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -9,12 +9,28 @@
         android:name="ru.osipov.nmediaapp.activities.FeedFragment"
         android:label="fragment_feed"
         tools:layout="@layout/fragment_feed" >
+
         <action
-            android:id="@+id/action_feedFragment2_to_newPostFragment"
-            app:destination="@id/newPostFragment" />
+            android:id="@+id/action_feedFragment2_to_postFragment"
+            app:destination="@id/postFragment" />
+        <action
+            android:id="@+id/action_feedFragment2_to_newPostFragment3"
+            app:destination="@id/newPostFragment3" />
+    </fragment>
+
+
+    <fragment
+        android:id="@+id/postFragment"
+        android:name="ru.osipov.nmediaapp.activities.PostFragment"
+        android:label="fragment_post"
+        tools:layout="@layout/fragment_post" >
+
+        <action
+            android:id="@+id/action_postFragment_to_newPostFragment3"
+            app:destination="@id/newPostFragment3" />
     </fragment>
     <fragment
-        android:id="@+id/newPostFragment"
+        android:id="@+id/newPostFragment3"
         android:name="ru.osipov.nmediaapp.activities.NewPostFragment"
         android:label="fragment_new_post"
         tools:layout="@layout/fragment_new_post" />
